app1/srv-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    app: app1
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: app1
    tier: frontend
