app1/ing-app1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-app1
spec:
  rules:
  - host: www.app1.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-srv
            port:
              number: 80
